fix demo toolbar spacing

--- a/docs/src/components/Demo/Demo.css
+++ b/docs/src/components/Demo/Demo.css
@@ -88,7 +88,7 @@
     gap: 2rem;
     height: 2.25rem;
     padding: 0;
-    padding-inline-start: 0.25rem;
+    padding-inline-start: 0.75rem;
     user-select: none;
 
     /* Scroll */
@@ -151,6 +151,7 @@
   .DemoTabsList {
     display: flex;
     gap: 2px;
+    margin-inline-start: -0.5rem;
   }
 
   .DemoTab {
